# bo_dfu

./: CMakeLists.txt  Kconfig  README.md
examples/basic/: CMakeLists.txt  sdkconfig.defaults
examples/basic/main/: CMakeLists.txt  main.c
include/: bo_dfu.h  bo_dfu_clk.h  bo_dfu_crc.h  bo_dfu_descriptor.h  bo_dfu_gpio.h  bo_dfu_internal.h  bo_dfu_internal_types.h  bo_dfu_log.h  bo_dfu_ota.h  bo_dfu_rx.h  bo_dfu_time.h  bo_dfu_transfer.h  bo_dfu_tx.h  bo_dfu_usb.h  bo_dfu_util.h  bo_dfu_wdt.h
src/: bo_dfu.c
